sort.basic.bubble.AlgBubbleSort3.scala.error
Compilation error:
AlgBubbleSort3:14: error: illegal start of simple expression
    }
    ^